# anchor

./: README.md
.github/workflows/: release.yml  test.yml
app/: .gitignore  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
app/scripts/: verify-tokenizer.mjs
app/src/: App.css  App.tsx
app/src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/icons/: icon.icns
app/src-tauri/src/: export.rs  hardware.rs  lib.rs  llama.rs  ocr.rs  paths.rs  setup.rs
app/src/components/: ConfirmDialog.dom.test.tsx  ConfirmDialog.tsx  CopyButton.tsx  DocumentViewer.dom.test.tsx  DocumentViewer.tsx  ErrorBoundary.dom.test.tsx  ErrorBoundary.tsx  HelpOverlay.tsx  Icon.tsx  Modal.tsx  OutputCard.tsx  ProvenanceTable.dom.test.tsx  ProvenanceTable.tsx  SideNavBar.tsx
app/src/features/export/: ExportMenu.dom.test.tsx  ExportMenu.tsx  exportUtils.test.ts  exportUtils.ts
app/src/features/extraction/: CellProvenance.tsx  ExtractionProgress.tsx  WordEditModal.dom.test.tsx  WordEditModal.tsx  confidence.test.ts  confidence.ts  pipeFormat.ts  provenance.test.ts  provenance.ts  types.ts  useDocumentExtraction.dom.test.tsx  useDocumentExtraction.ts
app/src/features/llama/: LlamaChatContext.tsx  (+7 more)
app/src/hooks/: useDialogA11y.dom.test.tsx  useDialogA11y.ts  useTheme.ts
app/src/layouts/: AppLayout.tsx  SplitLayout.tsx
app/src/lib/: db.test.ts  db.ts  settings.test.ts  settings.ts
app/src/pages/: About.tsx  Dashboard.tsx  Search.tsx  Session.tsx  Settings.tsx  searchUtils.test.ts  searchUtils.ts
app/src/test/: a11y.dom.test.tsx  fixtures.ts  helpers.ts  setup.ts
app/src/utils/: clipboard.ts  ocrTransforms.test.ts  ocrTransforms.ts
docs/: DARK_MODE.md  TESTING.md  TEST_PLAN.md  Tesseract.md  agentic-extraction.md  app-distribution.md  cloudflare-r2-setup.md  design.md  implementation-status.md  issues.md  ocr-llm-cell-provenance.md  todo.md
e2e/: .gitignore  package.json  tsconfig.json  wdio.conf.ts
e2e/fixtures/: README.md
e2e/specs/: extraction.e2e.ts  setup.e2e.ts
prototypes/GroundingTraceability/: README.md  backend.py  grounding-traceability.html
prototypes/LocationTrace/: README.md  backend.py  frontend.html
prototypes/OCR/: README.md  tesseract_table_ocr.py  tesseract_table_ocr_ollama.py
prototypes/Surya/: .gitignore  README.md  logprobs-test.mjs  surya.mjs
prototypes/Tauri/test/: .gitignore  package-lock.json  package.json
website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
website/src/: App.tsx  favicon.ts  main.tsx  theme.css
website/src/components/: AnchorMark.tsx  Icon.tsx
(+31 files in other folders)
