[package]
name = "app"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-shell = "2"
tauri-plugin-fs = "2"
tauri-plugin-sql = { version = "2.4.0", features = ["sqlite"] }
tauri-plugin-dialog = "2"

# PDF to Image conversion (Requires downloading the pdfium binaries)
pdfium-render = "0.8.10" 

# Tesseract OCR wrapper
rusty-tesseract = "1.1.9"
# Pre-OCR preprocessing: grayscale + Lanczos upscale (see ocr.rs::preprocess_for_ocr)
image = "0.25.10"

# Setup / dependency download
reqwest = { version = "0.12", default-features = false, features = ["stream", "rustls-tls"] }
# Async backoff between download retries (Tauri already pulls tokio in transitively).
tokio = { version = "1", features = ["time"] }
sha2 = "0.10"
zip = "2"
# llama.cpp ships macOS releases as .tar.gz (Windows is .zip)
flate2 = "1"
tar = "0.4"

